--- a/#source/scss/communication.scss
+++ b/#source/scss/communication.scss
@@ -1,5 +1,7 @@
 .communication__back{
     background: url(../../img/main/communication.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     .wrapper{
         display: flex;
         justify-content: end;
@@ -43,21 +45,41 @@
                 .check{
                     display: block;
                     @include fonts(400,14px,21px);
+                    display: flex;
+                    align-items: center;
+                    flex-wrap: wrap;
+                    input[type=checkbox]{
+                        appearance: none;
+                        position: relative;
+                        margin-right: 12px;
+                        height: 16px;
+                        width: 16px;
+                        background-color: #D7DADD;
+                        border-radius: 4px;
+                        cursor: pointer;
+                        &:checked{
+                            background-color: #FF5A30;
+                        }
+                        &::before{
+                            content: '';
+                            position: absolute;
+                            top: 1px;
+                            left: 6px;
+                            width: 4px;
+                            height: 9px;
+                            border: 1px solid transparent;
+                            border-left: none;
+                            border-top: none;
+                            transform: rotate(45deg) scale(1);
+                        }
+                        &:checked::before{
+                            border-color: #fff;
+                        }
+                    }
                 }
             }
-            .communication__button{
-                color: #FFFFFF;
-                @include fonts(700,14px,40px);
-                background-color: #FF5A30;
+            .orange__button{
                 padding: 0 32px;
-                border-radius: 4px;
-                border: 2px solid #FF5A30;
-                &:hover{
-                    cursor: pointer;
-                    color: #FF5A30;
-                    background-color: #FFFFFF;
-                    transition: all 0.2s ease-in;
-                }
             }
         }
     }
